[package]
name = "qemu-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
indoc = "2.0.7"
libc = "0.2.185"
linkme = "0.3"
log = "0.4.29"
qapi = { git = "https://github.com/mkulke/qapi-rs.git", rev = "7710f36", features = ["qmp"] }
rand = "0.10.0"
rayon = "1"
regex = "1.12.3"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
test-macro = { path = "test-macro" }
